; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/cp/extr_tree.c_rvalue.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/cp/extr_tree.c_rvalue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@processing_template_decl = common dso_local global i32 0, align 4
@NON_LVALUE_EXPR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @rvalue(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %5 = load i64, i64* %3, align 8
  %6 = call i64 @error_operand_p(i64 %5)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %10

8:                                                ; preds = %1
  %9 = load i64, i64* %3, align 8
  store i64 %9, i64* %2, align 8
  br label %47

10:                                               ; preds = %1
  %11 = load i64, i64* %3, align 8
  %12 = call i64 @TREE_TYPE(i64 %11)
  store i64 %12, i64* %4, align 8
  %13 = load i64, i64* %4, align 8
  %14 = call i32 @CLASS_TYPE_P(i64 %13)
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %23, label %16

16:                                               ; preds = %10
  %17 = load i64, i64* %4, align 8
  %18 = call i64 @cp_type_quals(i64 %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %23

20:                                               ; preds = %16
  %21 = load i64, i64* %4, align 8
  %22 = call i64 @TYPE_MAIN_VARIANT(i64 %21)
  store i64 %22, i64* %4, align 8
  br label %23

23:                                               ; preds = %20, %16, %10
  %24 = load i32, i32* @processing_template_decl, align 4
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %35, label %26

26:                                               ; preds = %23
  %27 = load i64, i64* %3, align 8
  %28 = call i64 @real_lvalue_p(i64 %27)
  %29 = icmp ne i64 %28, 0
  br i1 %29, label %30, label %35

30:                                               ; preds = %26
  %31 = load i32, i32* @NON_LVALUE_EXPR, align 4
  %32 = load i64, i64* %4, align 8
  %33 = load i64, i64* %3, align 8
  %34 = call i64 @build1(i32 %31, i64 %32, i64 %33)
  store i64 %34, i64* %3, align 8
  br label %45

35:                                               ; preds = %26, %23
  %36 = load i64, i64* %4, align 8
  %37 = load i64, i64* %3, align 8
  %38 = call i64 @TREE_TYPE(i64 %37)
  %39 = icmp ne i64 %36, %38
  br i1 %39, label %40, label %44

40:                                               ; preds = %35
  %41 = load i64, i64* %4, align 8
  %42 = load i64, i64* %3, align 8
  %43 = call i64 @build_nop(i64 %41, i64 %42)
  store i64 %43, i64* %3, align 8
  br label %44

44:                                               ; preds = %40, %35
  br label %45

45:                                               ; preds = %44, %30
  %46 = load i64, i64* %3, align 8
  store i64 %46, i64* %2, align 8
  br label %47

47:                                               ; preds = %45, %8
  %48 = load i64, i64* %2, align 8
  ret i64 %48
}

declare dso_local i64 @error_operand_p(i64) #1

declare dso_local i64 @TREE_TYPE(i64) #1

declare dso_local i32 @CLASS_TYPE_P(i64) #1

declare dso_local i64 @cp_type_quals(i64) #1

declare dso_local i64 @TYPE_MAIN_VARIANT(i64) #1

declare dso_local i64 @real_lvalue_p(i64) #1

declare dso_local i64 @build1(i32, i64, i64) #1

declare dso_local i64 @build_nop(i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
